# run3-mj-mixer

./: .gitignore  README.md  pyproject.toml
config/: config.json
docs/: how_to_run.md
scripts/: make_eos_filelists.py  make_fileset.py  make_mixing_jobs.py  run_all.sh  submit_mixer.py
src/run3_mj_mixer/: __init__.py  library.py  mix.py  stitch.py
